tests/errors/E012.zen
int main() {
    let a := 5;
    a = -3;         // E012: Mutation of immutable variable
    return a;
}